# tanssi-slash-analysis

./: .gitignore  README.md  pyproject.toml
output/: filtered_slashing.csv  slashing_data.csv
src/: apy_affect.py  load.py  present_cummulative.py  present_number_month.py  transform.py
