[tool.poetry]
name = "slashing_project"
version = "0.1.0"
description = "Process slashing data for Polkadot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
python-dateutil = "^2.9.0.post0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
